# diffusion2D

./: README.md  diffusion2d.py  output.py  pyproject.toml
best2Dsolver_diffusion2d/: diffusion2d.py
